oracle/deployment/applications/mc-router/mc-router.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-router
spec:
  selector:
    app: mc-router
  ports:
    - name: minecraft
      protocol: TCP
      port: 25565
      targetPort: minecraft
  type: ClusterIP
