oracle/deployment/applications/mc-router/mc-router.ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-router
spec:
  entryPoints:
    - minecraft
  routes:
    - services:
        - name: mc-router
          port: minecraft
          tls: false
      match: HostSNI(`*`) # Matches all SNI hosts. mc-router will handle the routing based on the SNI host.
